# Cartpole_DQN

Cartpole/: CMakeLists.txt  CartpoleEnv1.h  CartpoleEnv2.h  README.md  copy  deepl_actions.cpp  other_option_for_agent.cpp  possible_rward_fun.cpp  randomactions.cpp  slow_build_up.cpp  trying_new.cpp
Cartpole_DRL/: CMakeLists.txt  CartpoleEnv.h  CartpoleEnv2.h  Cartpole_DRL.cpp  Cartpole_new.cpp  README.md
NeuralNet/: CMakeLists.txt  csv_to_tensor.h  dataset.h  dataset.txt  neural_net.cpp  testing.cpp
